# prefengine

./: .gitignore  CONTRIBUTING GOALS.md  Cargo.toml  README.md  linux_build.sh  meson.build  win_build.bat  win_build_cargo32.bat
api/: Cargo.toml
api/src/: main.rs  webserver.rs
catalysis/: Cargo.toml
catalysis/src/: cat_log.rs  lib.rs
catalysis/src/app/: mod.rs
catalysis/src/bittorrent/: create_torrent.rs
catalysis/src/local_server/: mod.rs
data/: README.md  api_boilerplate.json  remote_recieved_conn.json  remote_recieved_data.json  reticulum_dummy_config.conf  self_peer.dummy.json  send_remote_syncdb.json
gateways/: Cargo.toml
gateways/src/: cat_log.rs  lib.rs
gateways/src/app/: mod.rs
gateways/src/local_server/: mod.rs
gateways/src/ssb/: create_ssb_id.rs  mod.rs  ssb_discov.rs  ssb_id.rs  tokio_compat_fix.rs
pref/: Cargo.toml
pref-ret/: dummyconfig.conf  remote_recieved_conn.json  remote_recieved_data.json  retapi.py  reticulum_dummy_config.conf  send_remote_syncdb.json
pref/src/: core.rs  discovery.rs  lib.rs
pref/src/app/: mod.rs
pref/src/core/: dir.rs  pref_log.rs
pref/src/peer_server/: connection.rs  db.rs  mod.rs  peer.rs  ret_util.rs
prefigurative/: Cargo.toml
prefigurative/src/: lib.rs
prefigurative/src/app/: mod.rs
prefigurative/src/local_server/: mod.rs
sandbox/: Cargo.toml
sandbox/src/: main.rs  webserver.rs
