[package]
name = "catalysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
log = "0.4"
simple_logger = "4"
time = "0.3"
axum = "0.7"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread"]}
