[package]
name = "pref"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]

[dependencies]
log = "0.4"
simple_logger = "4"
time = "0.3.37"

# http server
axum = "0.7"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread", "fs"]}

# file io
dirs-next = "2.0" 
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"

# p2p server
libp2p = "0.55.0"
