[package]
name = "prefengine"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[dependencies]
log = "0.4"
simple_logger = "4"
time = "0.3.37"

# http server
axum = "0.7"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "fs"]}

# file io
dirs-next = "2.0" 
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
configparser = "3.1"

# p2p server
pnet = "0.35"
easy-upnp = "0.2.1"

